--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
             <artifactId>restfb</artifactId>
             <version>1.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20141113</version>
+        </dependency>
+
     </dependencies>
 
 </project>
