--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
     <groupId>groupId</groupId>
     <artifactId>Hackathon</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+
     <dependencies>
+
         <dependency>
             <groupId>com.restfb</groupId>
             <artifactId>restfb</artifactId>
@@ -18,7 +21,15 @@
             <artifactId>json</artifactId>
             <version>20141113</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>1.7.0.RELEASE</version>
+        </dependency>
     </dependencies>
-
 </project>
