--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,11 @@
             <artifactId>spring-data-mongodb</artifactId>
             <version>1.7.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.facebook4j</groupId>
+            <artifactId>facebook4j-core</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
     </dependencies>
 </project>
